Fix the jumpy reward

--- a/static/css/view-project/src/activity.scss
+++ b/static/css/view-project/src/activity.scss
@@ -16,7 +16,6 @@
     margin-top: .8em;
     display: flex;
     justify-content: space-between;
-    align-items: center;
 
     & > .labeled {
       flex-basis: 50%;
